# e5-137-modular-research-sandbox

./: .gitignore  ARCHIVED.md  LICENSE  README.md  pyproject.toml
outputs/papers/: lepton_mass_matrix.tex  lepton_mass_matrix_ru.tex  modular_edge_ai.tex  modular_edge_ai_ru.tex
outputs/reports/: cpp_kernel_benchmark.md  dna_quantum_immortality_manifest.md  e5137_cryptography_manifest.md  phase9_cross_phase_optimization.md  super_test_matrix_compression.md  virtual_quantum_processor_manifest.md
src/cosmo_gradient/: __init__.py  binning.py  cli.py  clustered_mocks.py  config.py  coords.py  diagnostics.py  dipole.py  external_templates.py  fastspecfit.py  logging_utils.py  maps.py  masks.py  mock_calibration.py  modular_biology.py  modular_core.py  modular_crypto.py  modular_quantum.py  multipoles.py  official_mocks.py  pipeline.py  plots.py  randoms.py  reports.py  shell_mocks.py  statistics.py  storage.py  systematics.py  theory.py
src/cosmo_gradient/io/: __init__.py  desi.py
src/modular_biology/: dna_fault_tolerance.cpp
src/modular_core/: fused_matrix_gf137.cpp
src/modular_crypto/: e5137_protocol.cpp
src/modular_quantum/: vqp_core.cpp
tests/: test_super_matrix.py
tests_legacy_137/: test_binning.py  test_clustered_mocks.py  test_config_paths.py  test_coords.py  test_diagnostics.py  test_dipole.py  test_fastspecfit.py  test_mock_calibration.py  test_modular_biology.py  test_modular_core.py  test_modular_crypto.py  test_modular_quantum.py  test_multipoles.py  test_official_mocks.py  test_shell_mocks.py  test_statistics.py  test_systematics.py
